agregando el CRUD de categories a swagger
