# swagger.yaml
@@ -18,7 +18,9 @@ tags:
     description: Todos los endpoints de pictures
   - name: carts
     description: Todos los endpoints de carts
-
+  - name: categories
+    description: Todos los endpoints de categories
+    
 components:
   securitySchemes:
     bearerAuth:
@@ -1556,3 +1558,242 @@ paths:
                 properties:
                   Mensaje: 
                     type: string
+  
+  /categories:
+    get:
+      tags: 
+        - categories
+      summary: Lista todas las categorias del sistema 
+      security:
+        - bearerAuth: []
+        
+      responses: 
+        '200':
+          description: Categorias listadas con exito
+          content:
+            application/json:
+              schema:
+                properties:
+                      Categories:
+                        type: array
+                        items:
+                          type: object
+                          properties: 
+                            id_category:
+                              type: number
+                            title:
+                              type: string
+                      
+  
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+        
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+                    
+    post:
+      tags: 
+        - categories
+      summary: Crea una categoria
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                    
+      responses: 
+        '201':
+          description: Categoria creada con exito
+          content:
+            application/json:
+              schema:
+                properties:
+                  newCategory:
+                    type: object
+                    properties: 
+                      id_category:
+                        type: number
+                      title:
+                        type: string
+                      
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+        
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string    
+                    
+  /categories/{id}:
+    get:
+      tags: 
+        - categories
+      summary: Lista la categoria pasada por parametro
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: Id de la categoria
+          
+      responses: 
+        '200':
+          description: Categoria listada con exito
+          content:
+            application/json:
+              schema:
+                properties:
+                  Categories:
+                    type: object
+                    properties: 
+                      id_category:
+                        type: number
+                      title:
+                        type: string
+
+        '404':
+          description: Categoria no encontrada
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+        
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+                    
+    put:
+      tags: 
+        - categories
+      summary: Actualiza la categoria pasada por id
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: Id de la categoria
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: number
+              
+      responses: 
+        '200':
+          description: Actualizado con exito
+          content:
+            application/json:
+              schema:
+                properties:
+                  Categories:
+                    type: object
+                    properties: 
+                      title:
+                        type: string
+        '404':
+          description:  Categoria no encontrado
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+                    
+    delete:
+      tags: 
+        - categories
+      summary: Borra la categoria identificada con id 
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: Id de la categoria
+      
+      responses: 
+        '200':
+          description: Categoria eliminada con exito
+          content:
+            application/json:
+              schema:
+                properties:
+                  Categories:
+                    type: object
+                    properties: 
+                      title:
+                        type: string
+                      
+        '404':
+          description:  Categoria no encontrada
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string
+        
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                properties:
+                  Mensaje: 
+                    type: string    
